--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,33 +1,30 @@
-version: '2'
+version: "2"
 
 services:
   app:
-    image: celery-exporter:3
+    image: celery-exporter:1.3.0
     build:
       context: .
-      dockerfile: Dockerfile-celery3
-    user: "65534"
+      dockerfile: Dockerfile-app
+    user: "65534" # avoids run as root warning from celery
     volumes:
       - ./:/app
     environment:
-    - BROKER_URL=amqp://rabbit
+      - BROKER_URL=redis://@redis:6379/0
     entrypoint: celery -A celeryapp worker
 
   exporter:
-    image: celery-exporter:3
+    image: celery-exporter:1.3.0
     build:
       context: .
-      dockerfile: Dockerfile-celery3
+      dockerfile: Dockerfile
     volumes:
       - ./:/app
     environment:
-    - BROKER_URL=amqp://rabbit
-    - QUEUE_LIST=queue1,queue2,queue3
+      - BROKER_URL=redis://rabbit
+      - QUEUE_LIST=queue1,queue2,queue3
     ports:
       - 8888:8888
 
-  cache:
+  redis:
     image: redis:alpine
-
-  rabbit:
-    image: rabbitmq:alpine
