--- a/Pipfile
+++ b/Pipfile
@@ -8,6 +8,7 @@ verify_ssl = true
 [packages]
 celery = "==4.3.0"
 prometheus-client = "==0.5.0"
+redis = "==3.5.3"
 
 [requires]
 python_version = "3.7"
