SHUG-331 Major Rewrite (#3)
* Re-order imports

* Black formatting

* Remove Horst mentions from code

* Convert readme to markdown

* Delete version specific Dockerfiles

* Clean up Makefile

* Clean up README.md

* Clear out old project files that we wont need

* Replace requirements with Pipfile

* Update dockerfile to use Pipfile and simplify application set up

* Update docker-compose.yml

* Update celeryapp.py

* Update Makefile

* Exporter running in Docker container

* Move celeryapp to /test/app

* Remove /app folder

* Delete .coveragerc

* Rename celeryapp to app.py

* Remove celeryapp from test dir

* Add beat to docker-compose

* Move exporter into module folder

* Move app into module folder

* Rename Metrics

* Make tasks queue and complete faster

* Update entrypoint

* Define custom CollectorRegistry for metrics

* Major refactoring of exporter, paring down the cruft.

Remove options

* Event loop to collect metrics

* Major improvements across the board

* Ignore vscode

* All Basics Functional

Latency Histogram is left as a TODO

* Tasks for each priority level

* Set up beat to schedule on all priorities and queues

* add priority levels config

* Add priority levels and their adjustment to queue names, some refactoring

* Major readme update

* Delete setup.py

* Add version file

* Add latest tag to image build

* Reduce sleep down to 1/10ms for event handler

* Put signal handlers at start of main function to allow immediate clean exit

* Make development application config easier to modify.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,33 +1,43 @@
-version: '2'
+version: "2"
 
 services:
-  app:
-    image: celery-exporter:3
+  beat:
+    image: celery-exporter:latest
     build:
       context: .
-      dockerfile: Dockerfile-celery3
-    user: "65534"
+    user: "65534" # TODO: see if this is needed
     volumes:
       - ./:/app
     environment:
-    - BROKER_URL=amqp://rabbit
-    entrypoint: celery -A celeryapp worker
+      - BROKER_URL=redis://@redis:6379/0
+    entrypoint: celery -A app beat
+
+  worker:
+    image: celery-exporter:latest
+    build:
+      context: .
+    user: "65534" # TODO: see if this is needed
+    volumes:
+      - ./:/app
+    environment:
+      - BROKER_URL=redis://@redis:6379/0
+    entrypoint: celery -A app worker -Q queue1,queue2,queue3
 
   exporter:
-    image: celery-exporter:3
+    image: celery-exporter:latest
     build:
       context: .
-      dockerfile: Dockerfile-celery3
     volumes:
       - ./:/app
     environment:
-    - BROKER_URL=amqp://rabbit
-    - QUEUE_LIST=queue1,queue2,queue3
+      - BROKER_URL=redis://@redis:6379/0
+      - QUEUE_LIST=queue1,queue2,queue3
+      - PRIORITY_LEVELS=true
+      - VERBOSE=true
     ports:
       - 8888:8888
 
-  cache:
+  redis:
     image: redis:alpine
-
-  rabbit:
-    image: rabbitmq:alpine
+    ports:
+      - 6379:6379
