--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,7 @@
-*.img
-/dist
-/build
-/*.egg-info
-
 *.pyc
 __pycache__
-.coverage
-.tox/
-.cache/
+
+celerybeat.pid
+celerybeat-schedule
+
+.vscode
